Fixed "invisible" calendar icon in the Publish dialog (#2718)

--- a/src/main/resources/assets/styles/dialog/schedulable-dialog.less
+++ b/src/main/resources/assets/styles/dialog/schedulable-dialog.less
@@ -14,11 +14,9 @@
   }
 
   .dialog-buttons .button-container {
-
-    .publish-action, .schedule-action {
+    button:not(.icon-calendar) {
       .dialog-button(@bg: @admin-green);
     }
-
   }
 
   &.no-action {
